[package]
name = "cglinalg_vulkan"
version = "2.0.0"
edition = "2021"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "A small library providing Vulkan API specific projection matrices."
categories = [
    "graphics",
    "mathematics",
    "game-development",
    "game-engines",
    "no_std"
]
keywords = [
    "graphics", 
    "linear-algebra", 
    "quaternion", 
    "matrix",
    "vector"
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cglinalg_vulkan"

[features]
default = ["std"]
# Option: "core" is a platform-agnostic option that works in environments that cannot
# allocate memory. The environment needs to supply its own implementations of 
# `eh_personality`.
core = []
# Option: "alloc" enables support for environments that can allocate memory 
# but don't use the full standard library.
alloc = []
# Option: "std" enables support for environments that use the full standard library.
std = []

[dependencies]

[dependencies.cglinalg]
git = "https://github.com/lambdaxymox/cglinalg"
version = "0.21.0"

[dependencies.approx_cmp]
git = "https://github.com/lambdaxymox/approx_cmp"
version = "1.0.0"
